--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@ ul{
     padding: 0;
 }
 ul li{
-    display: flex;
+    display: inline-block;
     padding: 08px 16px;
     text-decoration: none;
     float: right;
@@ -52,6 +52,10 @@ ul li{
 .menu{
     text-align: center;
 }
+.menu1 {
+    justify-content: center;
+
+}
 .menu2{
     display: flex;
 }
@@ -67,6 +71,7 @@ ul li{
     margin: auto;  
     overflow: auto;
     justify-content: center;
+    display: inline-flex;
 }
 button{
     background-color: #F19201;
@@ -79,7 +84,7 @@ button{
 .drink{
     border: whitesmoke;
     text-align: center;
-    
+    padding: 30px;
     text-align: center;
     border-width: 10px;
 }
@@ -97,6 +102,7 @@ span{
         border-radius: 50%;
         height: 50px;
         width: 50px;
+        display: inline-flex;
     }
 footer{
     text-align: center;
